[fix] update spacing between contact cards

--- a/recoco/apps/addressbook/static/addressbook/css/contact_list.scss
+++ b/recoco/apps/addressbook/static/addressbook/css/contact_list.scss
@@ -188,7 +188,7 @@
   }
   &__list-container {
     display: flex;
-    gap: 1%;
+    gap: 1rem 1%;
     flex-wrap: wrap;
   }
 }
